--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
     "@clerk/themes": "^2.2.20",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -28,6 +29,7 @@
     "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "inngest": "^3.32.3",
     "jsonwebtoken": "^9.0.2",
@@ -41,6 +43,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-spinners": "^0.15.0",
+    "recharts": "^2.15.1",
     "send": "^1.1.0",
     "serve-static": "^1.16.2",
     "sonner": "^2.0.1",
