--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@uiw/react-md-editor": "^4.0.5",
     "amqplib": "^0.10.5",
     "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "core-js": "^3.41.0",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "html2pdf.js": "^0.9.3",
     "inngest": "^3.32.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -50,6 +53,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "webpack": "^5.98.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
