--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "core-js": "^3.41.0",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
-    "html2pdf.js": "^0.9.3",
+    "html2pdf.js": "^0.10.3",
     "inngest": "^3.32.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -42,6 +42,7 @@
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "path-to-regexp": "^8.2.0",
+    "postcss-color-function": "^4.1.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
